Refactor: Remove 'Coming Soon' labels from selection menu

--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
                             <div class="selection-card" onclick="selectDreamMode()">
                                 <div class="selection-icon">🌙</div>
                                 <div class="selection-info">
-                                    <span class="selection-title">꿈 해몽 번호 (준비중)</span>
+                                    <span class="selection-title">꿈 해몽 번호</span>
                                     <span class="selection-desc">어젯밤 꿈 내용을 입력해보세요</span>
                                 </div>
                             </div>
@@ -1012,7 +1012,7 @@
                             <div class="selection-card" onclick="selectHoroscopeMode()">
                                 <div class="selection-icon">🐅</div>
                                 <div class="selection-info">
-                                    <span class="selection-title">오늘의 띠별 운세 (준비중)</span>
+                                    <span class="selection-title">오늘의 띠별 운세</span>
                                     <span class="selection-desc">나의 띠에 맞는 행운의 숫자</span>
                                 </div>
                             </div>
