UI: Enhance filter notice visibility (Bold, 14px)

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                 </div>
                 <!-- Data Availability Notice -->
                 <div
-                    style="font-size:11px; color:#666; margin-top:8px; line-height:1.4; background:rgba(0,0,0,0.03); padding:6px; border-radius:4px;">
+                    style="font-size:14px; font-weight:bold; color:#d32f2f; margin-top:8px; line-height:1.4; background:rgba(255,0,0,0.05); padding:8px; border-radius:4px; border:1px solid rgba(255,0,0,0.1);">
                     1. 1등 당첨번호는 1회차부터 제공<br>
                     2. 1등 판매점현황은 262회차부터 제공
                 </div>
